--- a/cass/cassia-app.html
+++ b/cass/cassia-app.html
@@ -9,86 +9,69 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap');
         body { font-family: 'Inter', sans-serif; background: #05070a; color: #e2e8f0; overflow-x: hidden; }
         .cyber-card { background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(20px); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 2rem; }
-        .neon-text { text-shadow: 0 0 10px rgba(219, 39, 119, 0.5); }
+        .neon-text { text-shadow: 0 0 10px rgba(219, 39, 119, 0.5); font-style: italic; }
         .glow-button { background: linear-gradient(135deg, #db2777 0%, #7c3aed 100%); transition: 0.3s; box-shadow: 0 0 20px rgba(124, 58, 237, 0.3); }
         .glow-button:hover { box-shadow: 0 0 30px rgba(219, 39, 119, 0.6); transform: translateY(-2px); }
-        input, textarea, select { background: rgba(0,0,0,0.3) !important; border: 1px solid rgba(255,255,255,0.1) !important; transition: 0.3s; }
-        input:focus { border-color: #db2777 !important; outline: none; box-shadow: 0 0 10px rgba(219, 39, 119, 0.2); }
-        .status-dot { width: 8px; height: 8px; background: #10b981; border-radius: 50%; box-shadow: 0 0 10px #10b981; }
+        input, textarea { background: rgba(0,0,0,0.3) !important; border: 1px solid rgba(255,255,255,0.1) !important; transition: 0.3s; color: white !important; }
+        input:focus, textarea:focus { border-color: #db2777 !important; outline: none; box-shadow: 0 0 10px rgba(219, 39, 119, 0.2); }
     </style>
 </head>
 <body class="p-4 md:p-10">
 
-    <div id="content" class="hidden max-w-4xl mx-auto">
+    <div id="content" class="hidden max-w-5xl mx-auto">
         <div class="flex justify-between items-center mb-12 px-4">
-            <div class="flex items-center gap-2">
-                <div class="status-dot"></div>
-                <span class="text-[10px] font-black uppercase tracking-[0.3em] text-slate-500">Sistema Cássia Ativo</span>
-            </div>
-            <span class="text-[10px] font-black uppercase tracking-[0.3em] text-slate-500">v4.0 Final Edition</span>
+            <span class="text-[10px] font-black uppercase tracking-[0.3em] text-slate-500 italic">SISTEMA CÁSSIA PROMPT • ELITE V5</span>
         </div>
 
-        <header class="text-center mb-16">
-            <h1 class="text-6xl font-black tracking-tighter mb-4 italic neon-text italic">CÁSSIA PROMPT</h1>
-            <p class="text-slate-400 max-w-md mx-auto text-sm leading-relaxed">Engenharia de prompts de alta precisão. Converta dados brutos em comunicação extraordinária e 100% verídica.</p>
+        <header class="text-center mb-12">
+            <h1 class="text-6xl font-black tracking-tighter mb-4 neon-text italic">CÁSSIA PROMPT</h1>
+            <p class="text-slate-400 max-w-xl mx-auto text-[10px] uppercase tracking-[0.4em] font-bold">Arquitetura de Precisão Cirúrgica</p>
         </header>
 
         <div class="grid md:grid-cols-2 gap-8">
-            <div class="cyber-card p-8 space-y-6">
+            <div class="cyber-card p-8 space-y-6 border border-white/5">
                 <div>
-                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">01. Persona de Autoridade</label>
-                    <input type="text" id="persona" placeholder="Ex: Especialista Jurídico Sênior..." class="w-full p-4 rounded-xl text-sm">
+                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">01. Especialista (Persona)</label>
+                    <input type="text" id="persona" placeholder="Ex: Advogado Civil Sênior..." class="w-full p-4 rounded-xl text-sm">
                 </div>
 
                 <div>
-                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">02. Contexto do Projeto (Fatos)</label>
-                    <textarea id="contexto" placeholder="Insira os fatos reais: O que você vende? Qual o valor? Qual o prazo?" class="w-full p-4 rounded-xl text-sm h-24 resize-none"></textarea>
+                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">02. Fatos e Dados Reais (Sem Invenções)</label>
+                    <textarea id="contexto" placeholder="Liste os fatos, leis e informações verídicas aqui..." class="w-full p-4 rounded-xl text-sm h-32 resize-none"></textarea>
                 </div>
 
                 <div>
-                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">03. O Público e sua Dor Real</label>
-                    <input type="text" id="publico" placeholder="Ex: Donos de empresas com dívidas tributárias..." class="w-full p-4 rounded-xl text-sm">
+                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">03. Destinatário / Autoridade</label>
+                    <input type="text" id="publico" placeholder="Ex: Juiz da Vara de Família..." class="w-full p-4 rounded-xl text-sm">
                 </div>
                 
-                <div class="grid grid-cols-2 gap-4">
-                    <div>
-                        <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">04. Canal</label>
-                        <select id="canal" class="w-full p-4 rounded-xl text-sm text-slate-400">
-                            <option value="WhatsApp">WhatsApp</option>
-                            <option value="E-mail">E-mail</option>
-                            <option value="Script de Vídeo">Script Vídeo</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">05. Tom de Voz</label>
-                        <select id="tom" class="w-full p-4 rounded-xl text-sm text-slate-400">
-                            <option value="Sério e Analítico">Sério</option>
-                            <option value="Persuasivo e Firme">Persuasivo</option>
-                            <option value="Direto e Seco">Direto</option>
-                        </select>
-                    </div>
+                <div>
+                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">04. Documento / Formato</label>
+                    <input type="text" id="canal" placeholder="Ex: Petição Inicial, Notificação Extrajudicial..." class="w-full p-4 rounded-xl text-sm">
+                </div>
+
+                <div>
+                    <label class="text-[10px] font-bold text-pink-500 uppercase tracking-widest block mb-2">05. Tom de Voz</label>
+                    <input type="text" id="tom" placeholder="Ex: Jurídico Formal e Objetivo..." class="w-full p-4 rounded-xl text-sm">
                 </div>
 
                 <button onclick="gerarPromptFinal()" class="w-full glow-button p-5 rounded-2xl font-black text-sm uppercase tracking-widest">
-                    Arquitetar Prompt de Elite ⚡
+                    Gerar Engenharia de Prompt ⚡
                 </button>
             </div>
 
-            <div class="flex flex-col">
+            <div class="flex flex-col h-full">
                 <div id="resultadoArea" class="hidden h-full">
-                    <div class="cyber-card p-8 border-pink-500/30 h-full flex flex-col">
-                        <div class="flex items-center gap-2 mb-4">
-                            <div class="w-2 h-2 bg-pink-500 rounded-full"></div>
-                            <span class="text-[10px] font-bold uppercase tracking-widest">Resultado Gerado</span>
-                        </div>
+                    <div class="cyber-card p-8 border-pink-500/30 h-full flex flex-col border-2">
+                        <span class="text-[10px] font-bold uppercase tracking-widest text-pink-500 mb-6">Prompt Estruturado de Alta Performance</span>
                         <textarea id="promptFinal" class="flex-grow w-full bg-transparent border-none text-slate-300 text-sm leading-relaxed p-0 focus:ring-0 resize-none outline-none font-mono"></textarea>
-                        <button onclick="copyPrompt()" class="mt-6 w-full border border-pink-500/30 hover:bg-pink-500/10 p-4 rounded-xl font-bold text-xs uppercase transition-all">
+                        <button onclick="copyPrompt()" class="mt-6 w-full bg-white text-black p-5 rounded-2xl font-black text-xs uppercase transition-all hover:bg-pink-500 hover:text-white">
                             Copiar para o ChatGPT
                         </button>
                     </div>
                 </div>
                 <div id="placeholderResult" class="h-full border border-dashed border-slate-800 rounded-[2rem] flex items-center justify-center p-12 text-center">
-                    <p class="text-slate-600 text-xs font-medium uppercase tracking-widest leading-loose">Aguardando definição de parâmetros para iniciar engenharia...</p>
+                    <p class="text-slate-600 text-[10px] font-bold uppercase tracking-[0.3em]">Aguardando dados brutos...</p>
                 </div>
             </div>
         </div>
@@ -107,42 +90,46 @@
 
         function gerarPromptFinal() {
             const persona = document.getElementById('persona').value || "Especialista";
-            const contexto = document.getElementById('contexto').value || "Não informado";
-            const publico = document.getElementById('publico').value || "Público Geral";
-            const canal = document.getElementById('canal').value;
-            const tom = document.getElementById('tom').value;
+            const contexto = document.getElementById('contexto').value || "Sem dados";
+            const publico = document.getElementById('publico').value || "Destinatário";
+            const canal = document.getElementById('canal').value || "Documento";
+            const tom = document.getElementById('tom').value || "Objetivo";
 
-            const promptElite = `[DIRETRIZ DE ENGENHARIA CÁSSIA PROMPT - NÍVEL 10]
+            // Lógica para detectar Petição/Peça Jurídica
+            let diretrizEspecifica = "";
+            if(canal.toLowerCase().includes("petição") || canal.toLowerCase().includes("inicial") || canal.toLowerCase().includes("peça")) {
+                diretrizEspecifica = `PROTOCOLO JURÍDICO: Seja direto e objetivo. Vá direto aos pedidos. Elimine introduções genéricas, textos motivacionais ou "lenga-lenga". Foque na fundamentação técnica baseada nos fatos fornecidos.`;
+            }
 
-PERSONA: Atue como ${persona}.
-CANAL DE SAÍDA: ${canal}.
-TOM DE VOZ: ${tom}.
+            const promptElite = `[ENGENHARIA DE PROMPT CÁSSIA - NÍVEL 10]
 
-CONTEXTO REAL (DADOS E FATOS): 
+TAREFA: Elaborar ${canal}.
+PERSONA: ${persona}.
+DESTINATÁRIO: ${publico}.
+ESTILO: ${tom}.
+
+FATOS VERÍDICOS (DADOS REAIS):
 "${contexto}"
 
-PÚBLICO-ALVO E DOR:
-"${publico}"
+DIRETRIZES RÍGIDAS:
+1. NÃO INVENTE: Use apenas os fatos acima. Se faltar informação, use [INSERIR DADOS].
+2. OBJETIVIDADE TOTAL: ${diretrizEspecifica || "Seja conciso e profissional."}
+3. ESTRUTURA: Entregue o texto pronto para revisão final, sem comentários laterais.
+4. VERACIDADE: Proibido alucinar ou criar leis inexistentes.
 
-PROTOCOLO DE VERACIDADE (OBRIGATÓRIO):
-1. PROIBIDO INVENTAR: Não crie depoimentos, não invente números, não imagine bônus que não foram listados no contexto.
-2. FOCO EM FATOS: Use apenas as informações fornecidas acima para construir a comunicação.
-3. ESTILO: Se o canal for WhatsApp, use parágrafos curtos e emojis mínimos. Se for E-mail, use um assunto magnético e corpo estruturado.
-4. TAREFA: Crie um texto de ${canal} que resolva a dor do público usando exclusivamente os fatos do contexto.
-
-NÃO ALUCINE. SEJA ANALÍTICO E PERSUASIVO APENAS COM A VERDADE.
 RESULTADO:`;
 
             document.getElementById('promptFinal').value = promptElite;
             document.getElementById('placeholderResult').classList.add('hidden');
             document.getElementById('resultadoArea').classList.remove('hidden');
+            window.scrollTo({ top: document.body.scrollHeight, behavior: 'smooth' });
         }
 
         function copyPrompt() {
             const cp = document.getElementById("promptFinal");
             cp.select();
             document.execCommand("copy");
-            alert("SISTEMA: Prompt copiado com sucesso.");
+            alert("COPIADO: Pronto para colar no ChatGPT.");
         }
     </script>
 </body>
